--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
             type="image/svg+xml"
             href="/vite.svg" />
         <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
+        <link
             rel="preconnect"
             href="https://fonts.googleapis.com" />
         <link
